MDEV-27511 Assertion `rgi->gtid_ev_flags_extra & Gtid_log_event::FL_COMMIT_ALTER_E1' failed in write_bin_log_start_alter

The assert was caused by lack of proper cleanup of the sequential
slave's execution context, enriched by MDEV-11675 2 phase loggable
ALTER.

Fixed to conduct an explicit cleanup in non-parallel execution.